# embedded-competition-2026

./: README.md
K230/: person_keypoint_detect.py
SPARK/: .config  .cproject  .project  Kconfig  rtconfig.h  template.uvoptx  template.uvprojx
SPARK/applications/: JYD-18.c  JYD-18.h  aht20_app.c  aht20_app.h  atgm336h.c  atgm336h.h  bsp_system.h  cloud_config.h  cloud_pub.c  cloud_pub.h  icm20608_app.c  icm20608_app.h  jdy18_skystar.c  jdy18_skystar.h  main.c  mqtt_client.c  mqtt_client.h  pm2.5.c  pm2.5.h  sensor_threads.c  sensor_threads.h  telemetry_pack.c  telemetry_pack.h  uart_app.c  uart_app.h
SkyStar/: .config  .cproject  .project  Kconfig  exclude_list.json  rtconfig.h
SkyStar/applications/: Emm_driver.c  Emm_driver.h  JYD-18.c  JYD-18.h  bsp_system.h  key_app.c  key_app.h  main.c  nrf24l01.c  nrf24l01.h  nrf24l01_app.c  nrf24l01_app.h  rc_drive.c  rc_drive.h  uart_app.c  uart_app.h  xiaozhi_link.c  xiaozhi_link.h
SkyStar/cubemx/: .mxproject  cubemx.ioc
SkyStar/drivers/: board.c  board.h
Smart_Watch/: .gitignore  idf_5.3.2.code-workspace  sdkconfig  sdkconfig.defaults
Smart_Watch/blog/: 01_项目架构与双I2C总线设计.md  02_MPU6050跌倒检测算法与状态机设计.md  04_软件I2C实现与OLED显示优化.md  (+1 more)
Smart_Watch/main/: CMakeLists.txt  main.c
Smart_Watch/main/app/: app_ds18b20.c  app_ds18b20.h  app_max30102.c  app_max30102.h  app_mpu6050.c  app_mpu6050.h  app_spp.c  app_spp.h  app_ssd1306_oled.c  app_ssd1306_oled.h  max30102_algorithm.c  max30102_algorithm.h
web1/: .env.example  .gitignore  config.js  package-lock.json  package.json  server.js
xiaozhi-esp32-main/: sdkconfig.defaults
(+52 files in other folders)
